Added exceptions classes and added operations POW,ABS,CONCAT,SUB and more