@@ -4,20 +4,20 @@ import entities.core.CoreSheet;
 
 import java.util.List;
 
-public class TIMESOperation extends Operation {
-    public TIMESOperation(CoreSheet sheet, List<Object> arguments) {
+public class ABSOperation extends Operation {
+    public ABSOperation(CoreSheet sheet, List<Object> arguments) {
         super.sheet = sheet;
-        super.name = "TIMES";
+        super.name = "ABS";
         super.arguments = arguments;
     }
 
     @Override
     public Double execute() {
         List<Object> nonOperationObjects = convertToNonOperationObjects();
-        Class<?>[] expectedClazzes ={Number.class, Number.class};
+        Class<?>[] expectedClazzes ={Number.class};
         validateArgumentsTypes(expectedClazzes, nonOperationObjects);
         List<Double> doubles = convertToDouble(nonOperationObjects);
 
-        return doubles.get(0)*doubles.get(1);
+        return Math.abs(doubles.getFirst());
     }
 }
